modulos de modelos adicionado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,12 +114,15 @@
     <string name="nao_encontrou_empresas">Não foi possível obter os dados das empresas</string>
     <string name="nao_encontrou_condicoes">Não foi possível obter os dados das condiçoes de pagamento</string>
     <string name="nao_encontrou_cores">Não foi possível encontrar as cores do produto</string>
+    <string name="nao_encontrou_combinacoes">Não foi possível encontrar as combinações do modelo</string>
     <string name="nao_encontrou_unidades">Não foi possível obter os dados das unidades de medida</string>
     <string name="nao_encontrou_itens_venda">Não foi possível obter os itens da venda</string>
     <string name="falha_inserir_cliente">Falha ao inserir os dados do cliente</string>
     <string name="falha_atualizar_cliente">Falha ao atualizar os dados do cliente</string>
     <string name="falha_inserir_produto">Falha ao inserir os dados do produto</string>
     <string name="falha_atualizar_produto">Falha ao atualizar os dados do produto</string>
+    <string name="falha_inserir_modelo">Falha ao inserir os dados do modelo</string>
+    <string name="falha_atualizar_modelo">Falha ao atualizar os dados do modelo</string>
     <string name="falha_inserir_venda">Falha ao inserir os dados da venda</string>
     <string name="falha_inserir_itens_venda">Falha ao inserir os itens da venda</string>
     <string name="falha_atualizar_venda">Falha ao atualizar os dados da venda</string>
@@ -157,11 +160,21 @@
     <string name="preco_venda">Preço venda</string>
     <string name="adicionar_cores">Adicionar Cores</string>
     <string name="nenhuma_unidade_medida">Nenhuma unidade de medida encontrada</string>
+    <string name="nenhuma_grade">Nenhuma grade encontrada</string>
     <string name="cadastro_produto">Cadastro de Produto</string>
     <string name="falha_inserir_cores">Falha ao inserir os dados das cores</string>
     <string name="falha_remover_cores">Falha ao remover as cores do produto</string>
+    <string name="falha_inserir_combinacoes">Falha ao inserir os dados das combinações</string>
+    <string name="falha_remover_combinacoes">Falha ao remover as combinações do modelo</string>
     <string name="digite_nome_cor">Digite o nome da cor</string>
     <string name="adicione_cores">É necessário ao menos uma cor para continuar</string>
+    <string name="adicione_combinacoes">É necessário ao menos uma combinação para continuar</string>
     <string name="percentual_lucro">Perc. Lucro</string>
+    <string name="modelos">Modelos</string>
+    <string name="digite_nome_modelo">Digite o nome do modelo</string>
+    <string name="grade">Grade</string>
+    <string name="adicionar_combinacoes">Adicionar Combinações</string>
+    <string name="cadastro_modelo">Cadastro de modelo</string>
+    <string name="digite_nome_combinacao">Digite o nome da combinação</string>
 
 </resources>
